change with latest ansible version. change etcd version and support etcd user non-root

--- a/etcd/roles/etcd-cluster-tls/files/etcd.service
+++ b/etcd/roles/etcd-cluster-tls/files/etcd.service
@@ -3,6 +3,7 @@ Description=etcd distributed reliable key-value store
 
 [Service]
 Type=notify
+User=etcd
 ExecStart=/usr/local/bin/etcd --config-file /etc/etcd/etcd.conf.yaml
 Restart=on-failure
 RestartSec=5
